--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -7,6 +7,7 @@ body{
   background-color: #FFFFF0;
 }
 /*----------landing----------------------------------------------------------------------------------------*/
+
 .landing-con{
    width: 100vw;
    height: 110vh;
@@ -45,7 +46,7 @@ body{
 .typing{
   margin-left: .5rem;
   position: relative;
-  color: red;
+  color: #7e0c0c;
 }
 /*@keyframes blink{
   from{
@@ -141,15 +142,15 @@ body{
 }
 /*---------about-------------------------------------------------------------------------------------------*/
 .about{
-  width: 100vw;
+  width: 50%;
   height: 100vh;
 
 }
 .about-header-text{
-  z-index: 2;
+  z-index: 3;
 }
 .about-con{
-  width: 100%;
+
   
   justify-content: center;
   align-items: center;
@@ -158,14 +159,14 @@ body{
   position: absolute;
   overflow-y: hidden;
  
-  width: 100%;
+  width: 52%;
   height: 100%;
 }
 
 .grad-show{
-   
-    opacity: .6;
-    transition: 1s;
+  
+    opacity: .5;
+    transition: 2s .5s;
 }
 .grad-hide{
    
@@ -178,13 +179,21 @@ body{
   letter-spacing: 2rem;
 
 } 
+.grad-top{
+  position: absolute;
+  overflow-y: hidden;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background: -webkit-linear-gradient(180deg, rgb(0, 0, 0, 0),  rgb(0, 0, 0, 1));
+}
 .grad{
   position: absolute;
   overflow-y: hidden;
   z-index: 1;
   width: 100%;
   height: 100%;
-  background-color: black;
+  background: -webkit-linear-gradient(90deg,  rgb(0, 0, 0, 1), rgb(0, 0, 0, 1));
 }
 .about-title h1{
   background: -webkit-linear-gradient(90deg, rgb(255, 255, 255), rgba(255, 255, 255));
@@ -201,7 +210,7 @@ body{
   flex-direction: column;
   margin-top: 10rem;
   height: 24vh;
- z-index: 2;
+ z-index: 3;
 }
 .about-text .underline{
   
@@ -210,12 +219,15 @@ body{
    height: 100%;
 }
 .about-text h1{
-  margin-top: 4rem;
+ 
  
    padding-bottom: 1rem;
  
  
  
+}
+.about-text p{
+  padding-bottom: 1rem;
 }
 .about-img{
   justify-content: center;
@@ -242,6 +254,7 @@ body{
   flex-direction: column;
   width: 100%;
   height: 100%;
+
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
@@ -286,7 +299,7 @@ body{
 /*-----------------------------*/
 .text-under-show{
   transform: translateY(0px);
-  transition: 1s .3s;
+  transition: 1s 1s;
   opacity: 1;
 }
 .text-under-hide{
@@ -294,4 +307,132 @@ body{
   transition: 1s ;
   opacity: 0;
 }
+/*---------------------------------------------------------------------------------------------------*/
+.port{
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  
+}
+
+/*-----------tech-----------------------------------------------------------------------------------------*/
+  .tech-con{
+    width: 50%;
+    height: 100vh;
+    background-color: black;
+    
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .un{
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 2rem;
+  }
+ .underline-header{
+ 
+    width: 80%;
+    height: 2px;
+    background-color: blanchedalmond;
+    margin-bottom: 2rem;
+  } 
+  .box {
+    width: 90%;
+   
+  
+    color:rgb(255, 255, 255);
+    justify-content: space-around;
+    align-items: center;
+    display: flex;
+    font-size: .5rem;
+  }
+  .lau-con{
+
+  }
+  .tech-kn{
+    padding-top: 8rem;
+    padding-bottom: 1rem;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    width: 100%;
+    font-size: 1.3rem;
+
+  }
+/*---------work---------------------------------------------------------------------------------------------*/
+  .work-con{
+    width:100vw;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .header-text-work{
+
+  }
+  .header-text-work h1{
+    margin-bottom: 1rem;
+    margin-top: 2rem;
+  }
+  .underline-header-work{
+    width: 80%;
+    height: 2px;
+    background-color: black;
+    margin-bottom: 2rem;
+  }
+  .projects{
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+  }
+  .project-grid{
+    width: 80%;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    
+     display: grid;
+     grid-template-columns: repeat(2, 1fr);
+     grid-template-rows: auto;
+     animation: load .8s ;
+  }
+  .project-img{
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .img-con{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    width: 100%;
+  }
+  .proj-img{
+    width: 100%;
+    height: 270px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+  .text{
+   
+    justify-content: center;
+    align-items: center;
+    display: flex;
+   
+  }
 /*--------------------------------------------------------------------------------------------------------*/
