--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -185,7 +185,7 @@ body{
   z-index: 2;
   width: 100%;
   height: 100%;
-  background: -webkit-linear-gradient(180deg, rgb(0, 0, 0, 0),  rgb(0, 0, 0, 1));
+  background: -webkit-linear-gradient(180deg, rgb(0, 0, 0, 0),  rgb(0, 0, 0, 0));
 }
 .grad{
   position: absolute;
@@ -395,7 +395,7 @@ body{
       display: flex;
   }
   .project-grid{
-    width: 80%;
+    width: 60%;
     justify-content: center;
     align-items: center;
     gap: 1rem;
@@ -407,7 +407,7 @@ body{
   }
   .project-img{
     width: 100%;
-    justify-content: center;
+    
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -416,23 +416,60 @@ body{
     justify-content: center;
     align-items: center;
     display: flex;
-    width: 100%;
+    width: 450px;
+    
   }
   .proj-img{
+   
     width: 100%;
-    height: 270px;
+    height: 250px;
     justify-content: center;
     align-items: center;
     display: flex;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    border-radius: 10px;
+    position: relative;
+    overflow-x: hidden;
+    overflow-y: hidden;
   }
   .text{
-   
+    margin-top: 6rem;
     justify-content: center;
     align-items: center;
     display: flex;
-   
+    flex-direction: column;
+    position: absolute;
+    z-index: 2;
+    color: white;
+  }
+  .text p{
+    width: 40%;
+    font-size: .8rem;
+  }
+  .u{
+  
+  }
+  .grad-img{
+    border-radius: 10px;
+    position: absolute;
+    width: 450px;
+    height: 250px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    z-index: 1;
+   background-color: rgb(0, 0, 0);
+   opacity: .8;
+  
+  }
+  .icon{
+    position: absolute;
+    width: 450px;
+    height: 10%;
+    background-color: thistle;
+    z-index: 2;
+    
   }
 /*--------------------------------------------------------------------------------------------------------*/
