--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -4,7 +4,7 @@
 }
 body{
   overflow-x: hidden;
-  background-color: #FFFFF0;
+
 }
 /*----------landing----------------------------------------------------------------------------------------*/
 
@@ -368,8 +368,20 @@ body{
 
   }
 /*---------work---------------------------------------------------------------------------------------------*/
+.work{
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
   .work-con{
-    width:100vw;
+    padding: 3rem;
+    transform: translateY(-50px);
+    z-index: 4;
+    background-color: white;
+    border-radius: 20px;
+    width: 80%;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -383,7 +395,7 @@ body{
     margin-top: 2rem;
   }
   .underline-header-work{
-    width: 80%;
+    width: 100%;
     height: 2px;
     background-color: black;
     margin-bottom: 2rem;
@@ -405,9 +417,19 @@ body{
      grid-template-rows: auto;
      animation: load .8s ;
   }
+  .proj-img-con{
+    width: 100%;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    width: 450px;
+  
+    z-index: 5;
+  }
   .project-img{
     width: 100%;
-    
+    width: 450px;
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -431,8 +453,7 @@ body{
     background-size: cover;
     border-radius: 10px;
     position: relative;
-    overflow-x: hidden;
-    overflow-y: hidden;
+   
   }
   .text{
     margin-top: 6rem;
@@ -468,8 +489,35 @@ body{
     position: absolute;
     width: 450px;
     height: 10%;
-    background-color: thistle;
+    background-color: rgb(240, 240, 240);
     z-index: 2;
+    justify-content: space-around;
+    align-items: center;
+    display: flex;
+    opacity: .5;
+    transform: translateY(-20px);
+  }
+  .icons{
     
+    z-index: 3;
+    justify-content: space-around;
+    align-items: center;
+    display: flex;
+  }
+  .icons .git, .site{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+     padding: 10px 20px 10px 20px;
+     border-radius: 30px;
+
+     color: black;
+     margin-left: .5rem;
+     margin-right: .5rem;
+  }
+ 
+  .icons i{
+    margin-left: .2rem;
+    font-size: 2rem;
   }
 /*--------------------------------------------------------------------------------------------------------*/
