--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -81,6 +81,7 @@ body{
   flex-direction: column;
  padding: 1rem;
 }
+
 @keyframes arrow-an {
   0%, 20%, 50%, 80%, 100% {
     -webkit-transform: translateY(0); opacity: 1;}
@@ -139,6 +140,221 @@ body{
 .scroll-show{
   transform: translateY(-200px);
   transition: .4s;
+}
+/*---------------------------------------------------------------------------------------------------*/
+.port{
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  
+}
+/*-----------tech-----------------------------------------------------------------------------------------*/
+.tech-con{
+  width: 50%;
+  height: 100vh;
+  background-color: black;
+  
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+.un{
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 2rem;
+}
+.underline-header{
+
+  width: 80%;
+  height: 2px;
+  background-color: blanchedalmond;
+  margin-bottom: 2rem;
+} 
+.box {
+  width: 50%;
+ 
+  
+  margin: 1rem;
+  color:rgb(255, 255, 255);
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  font-size: .5rem;
+}
+.title-1{
+  color:rgb(255, 255, 255);
+  font-size: 1rem;
+}
+
+.boxes{
+justify-content: space-around;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin-top: 3rem;
+  width: 90%;
+}
+.und-lau{
+width: 96%;
+height: 1px;
+background-color: beige;
+}
+.box-2 {
+width: 100%;
+ 
+
+margin: 1rem;
+color:rgb(255, 255, 255);
+justify-content: center;
+align-items: center;
+display: flex;
+
+font-size: .5rem;
+
+}
+.lau-con{
+width: 100%;
+padding: .2rem;
+justify-content: center;
+align-items: center;
+display: flex;
+flex-direction: column;
+}
+.lau-con h1{
+padding: .3rem;
+}
+/*-------------------------------------------*/
+.html{
+  transform: translateX(90px);
+}
+.css{
+  transform: translateX(50px);
+}
+.js{
+  transform: translateX(70px);
+}
+.react{
+  transform: translateX(40px);
+}
+.php{
+  transform: translateX(0px);
+}
+.spl{
+  transform: translateX(10px);
+}
+.oop{
+  transform: translateX(-70px);
+} 
+.git-hub{
+  transform: translateX(60px);
+}
+/*----------------------------------------*/
+.html-show{
+  transform: translateX(90px);
+  transition: .5s 1s;
+}
+.html-hide{
+  transform: translateX(0px);
+  transition: .5s 1s;
+} 
+/*----------------------------------------*/
+
+.css-show{
+  transform: translateX(70px);
+  transition: .5s 1s;
+}
+.css-hide{
+  transform: translateX(0px);
+  transition: .5s 1s;
+} 
+/*----------------------------------------*/
+
+.js-show{
+  transform: translateX(50px);
+  transition: .5s 1s;
+}
+.js-hide{
+  transform: translateX(0px);
+  transition: .5s 1s;
+} 
+/*----------------------------------------*/
+.react-show{
+  transform: translateX(30px);
+  transition: .5s 1s;
+}
+.react-hide{
+  transform: translateX(0px);
+  transition: .5s 1s;
+} 
+/*----------------------------------------*/
+.php-show{
+  transform: translateX(0px);
+  transition: .5s 1s;
+}
+.php-hide{
+  transform: translateX(0px);
+  transition: .5s 1s;
+} 
+/*----------------------------------------*/
+.sql-show{
+  transform: translateX(-30px);
+  transition: .5s 1s;
+}
+.sql-hide{
+  transform: translateX(0px);
+  transition: .5s 1s;
+} 
+
+
+/*-------------------------------------------*/
+.oop-show{
+transform: translateX(-50px);
+transition: .5s 1s;
+}
+.oop-hide{
+transform: translateX(0px);
+transition: .5s 1s;
+} 
+
+
+/*-------------------------------------------*/
+.git-show{
+  transform: translateX(-70px);
+  transition: .5s 1s;
+}
+.git-hide{
+  transform: translateX(0px);
+  transition: .5s 1s;
+} 
+
+
+/*-------------------------------------------*/
+.title-lau{
+color: red;
+justify-content: center;
+
+display: flex;
+}
+.lau-con{
+   margin: .2rem;
+}
+.tech-kn{
+  padding-top: 3rem;
+  padding-bottom: 4rem;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  width: 100%;
+  font-size: 1.3rem;
+
 }
 /*---------about-------------------------------------------------------------------------------------------*/
 .about{
@@ -307,66 +523,9 @@ body{
   transition: 1s ;
   opacity: 0;
 }
-/*---------------------------------------------------------------------------------------------------*/
-.port{
-  width: 100vw;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  
-}
 
-/*-----------tech-----------------------------------------------------------------------------------------*/
-  .tech-con{
-    width: 50%;
-    height: 100vh;
-    background-color: black;
-    
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-  }
-  .un{
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 2rem;
-  }
- .underline-header{
- 
-    width: 80%;
-    height: 2px;
-    background-color: blanchedalmond;
-    margin-bottom: 2rem;
-  } 
-  .box {
-    width: 90%;
-   
-  
-    color:rgb(255, 255, 255);
-    justify-content: space-around;
-    align-items: center;
-    display: flex;
-    font-size: .5rem;
-  }
-  .lau-con{
 
-  }
-  .tech-kn{
-    padding-top: 8rem;
-    padding-bottom: 1rem;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    color: white;
-    width: 100%;
-    font-size: 1.3rem;
 
-  }
 /*---------work---------------------------------------------------------------------------------------------*/
 .work{
   width: 100vw;
@@ -374,18 +533,21 @@ body{
   align-items: center;
   display: flex;
   flex-direction: column;
+  background-color: rgb(252, 252, 252);
+  
 }
   .work-con{
-    padding: 3rem;
+    
     transform: translateY(-50px);
     z-index: 4;
     background-color: white;
     border-radius: 20px;
-    width: 80%;
+    width: 95%;
     justify-content: center;
     align-items: center;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
   }
   .header-text-work{
 
@@ -395,11 +557,31 @@ body{
     margin-top: 2rem;
   }
   .underline-header-work{
-    width: 100%;
+    width: 90%;
     height: 2px;
     background-color: black;
     margin-bottom: 2rem;
   }
+    /*--------------------------------*/
+    .textH-show{
+      transform: translateY(0px);
+      transition: 1s .7s;
+    }
+    .textH-hide{
+      transform: translateY(-130px);
+      transition: .5s .7s;
+    }
+  /*--------------------------------*/
+   
+   .und-show{
+    transform: translateY(0px);
+    transition: 1s .4s;
+  }
+  .und-hide{
+    transform: translateY(-130px);
+    transition: .5s .4s;
+  }
+/*--------------------------------*/
   .projects{
       width: 100%;
       justify-content: center;
@@ -411,21 +593,32 @@ body{
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    
+   
      display: grid;
      grid-template-columns: repeat(2, 1fr);
      grid-template-rows: auto;
      animation: load .8s ;
   }
+  /*--------------------------------*/
+    .proj-show{
+      transform: translateY(0px);
+      transition: .5s .7s;
+      opacity: 1;
+    }
+    .proj-hide{
+      transform: translateY(100px);
+      transition: .5s .7s;
+      opacity: 0;
+    }
+  /*--------------------------------*/
   .proj-img-con{
     width: 100%;
     align-items: center;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+   
     width: 450px;
   
-    z-index: 5;
   }
   .project-img{
     width: 100%;
@@ -433,13 +626,15 @@ body{
     align-items: center;
     display: flex;
     flex-direction: column;
+    position: relative;
+    overflow: hidden;
   }
   .img-con{
     justify-content: center;
     align-items: center;
     display: flex;
     width: 450px;
-    
+    position: relative;
   }
   .proj-img{
    
@@ -469,9 +664,7 @@ body{
     width: 40%;
     font-size: .8rem;
   }
-  .u{
-  
-  }
+
   .grad-img{
     border-radius: 10px;
     position: absolute;
@@ -488,22 +681,37 @@ body{
   .icon{
     position: absolute;
     width: 450px;
-    height: 10%;
+    height: 20%;
     background-color: rgb(240, 240, 240);
-    z-index: 2;
+    z-index: 5;
     justify-content: space-around;
     align-items: center;
     display: flex;
     opacity: .5;
-    transform: translateY(-20px);
-  }
-  .icons{
     
-    z-index: 3;
+  }
+   .proj-img-con:hover .icon{
+    transform: translateY(0px);
+    transition: .3s;
+  } 
+  /*----------------------------------------------*/
+    .icon-show{
+      transform: translateY(0px);
+      transition: .5s;
+    }
+    .icon-hide{
+      transform: translateY(-40px);
+      transition: .5s;
+    }
+  /*----------------------------------------------*/
+  .icons{
+   
+    z-index: 1;
     justify-content: space-around;
     align-items: center;
     display: flex;
   }
+   
   .icons .git, .site{
     justify-content: center;
     align-items: center;
@@ -521,3 +729,415 @@ body{
     font-size: 2rem;
   }
 /*--------------------------------------------------------------------------------------------------------*/
+
+@media screen and (min-width: 0px) and (max-width:1200px){
+  .port{
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .tech-con{
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+    
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .about-con{
+
+  
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    overflow-y: hidden;
+   
+    width: 100vw;
+    height: 100%;
+  }
+  .about-img{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 100%;
+  }
+  .about-img .img{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    position: relative;
+  
+  }
+  .image-banner{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+  
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  .about-text p{
+    width: 60%;
+  }
+
+}
+@media screen and (min-width: 0px) and (max-width:950px) {
+  nav{
+    width: 100%;
+    background-color: black;
+    height: 5rem;
+    position: fixed;
+    top: 0;
+  }
+  .nav-link{
+    float: right;
+    width: 50%;
+    height: 100%;
+   
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin-right: 1rem;
+  }
+  ul {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    
+  }
+  ul a li{
+    margin: 1.3rem;
+    list-style: none;
+    text-decoration: none;
+    font-size: 2rem;
+    color: white
+  }
+  ul a{
+    text-decoration: none;
+  }
+
+/*---------------------------------------------------------------------------------------------------*/
+.port{
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  
+}
+  .projects{
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+.project-grid{
+  width: 800px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  
+
+}
+.proj-img-con{
+  width: 100%;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+ 
+  
+
+}
+
+.project-img{
+  width: 100%;
+ 
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  overflow: hidden;
+}
+.img-con{
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  width: 100%;
+  position: relative;
+}
+.proj-img{
+ 
+  width: 100%;
+  height: 250px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+  position: relative;
+ 
+}
+.text{
+  margin-top: 6rem;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  z-index: 2;
+  color: white;
+}
+.text p{
+  width: 40%;
+  font-size: .8rem;
+}
+
+.grad-img{
+  border-radius: 10px;
+  position: absolute;
+  width: 100%;
+  height: 250px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  z-index: 1;
+ background-color: rgb(0, 0, 0);
+ opacity: .8;
+
+}
+.icon{
+  position: absolute;
+  width: 100%;
+  height: 20%;
+  background-color: rgb(240, 240, 240);
+  z-index: 5;
+  justify-content: space-around;
+  align-items: center;
+  display: flex;
+  opacity: .5;
+  
+}
+ .proj-img-con:hover .icon{
+  transform: translateY(0px);
+  transition: .3s;
+} 
+}
+@media screen and (min-width: 0px) and (max-width:890px) {
+  .projects{
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+.project-grid{
+  width: 600px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  
+
+}
+.proj-img-con{
+  width: 100%;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+ 
+  
+
+}
+
+.project-img{
+  width: 100%;
+ 
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  overflow: hidden;
+}
+.img-con{
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  width: 100%;
+  position: relative;
+}
+.proj-img{
+ 
+  width: 100%;
+  height: 250px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+  position: relative;
+ 
+}
+.text{
+  margin-top: 6rem;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  z-index: 2;
+  color: white;
+}
+.text p{
+  width: 40%;
+  font-size: .8rem;
+}
+
+.grad-img{
+  border-radius: 10px;
+  position: absolute;
+  width: 100%;
+  height: 250px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  z-index: 1;
+ background-color: rgb(0, 0, 0);
+ opacity: .8;
+
+}
+.icon{
+  position: absolute;
+  width: 100%;
+  height: 20%;
+  background-color: rgb(240, 240, 240);
+  z-index: 5;
+  justify-content: space-around;
+  align-items: center;
+  display: flex;
+  opacity: .5;
+  
+}
+ .proj-img-con:hover .icon{
+  transform: translateY(0px);
+  transition: .3s;
+} 
+}
+@media screen and (min-width: 0px) and (max-width:650px) {
+  .projects{
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+.project-grid{
+  width: 400px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  
+
+}
+.proj-img-con{
+  width: 100%;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+ 
+  
+
+}
+
+.project-img{
+  width: 100%;
+ 
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  overflow: hidden;
+}
+.img-con{
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  width: 100%;
+  position: relative;
+}
+.proj-img{
+ 
+  width: 100%;
+  height: 250px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+  position: relative;
+ 
+}
+.text{
+  margin-top: 6rem;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  z-index: 2;
+  color: white;
+}
+.text p{
+  width: 40%;
+  font-size: .8rem;
+}
+
+.grad-img{
+  border-radius: 10px;
+  position: absolute;
+  width: 100%;
+  height: 250px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  z-index: 1;
+ background-color: rgb(0, 0, 0);
+ opacity: .8;
+
+}
+.icon{
+  position: absolute;
+  width: 100%;
+  height: 20%;
+  background-color: rgb(240, 240, 240);
+  z-index: 5;
+  justify-content: space-around;
+  align-items: center;
+  display: flex;
+  opacity: .5;
+  
+}
+ .proj-img-con:hover .icon{
+  transform: translateY(0px);
+  transition: .3s;
+} 
+}
