--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -257,80 +257,80 @@ padding: .3rem;
 /*----------------------------------------*/
 .html-show{
   transform: translateX(90px);
-  transition: .5s 1s;
+  transition: .5s .4s;
 }
 .html-hide{
   transform: translateX(0px);
-  transition: .5s 1s;
+  transition: .5s .4s;
 } 
 /*----------------------------------------*/
 
 .css-show{
   transform: translateX(70px);
-  transition: .5s 1s;
+  transition: .5s .4s;
 }
 .css-hide{
   transform: translateX(0px);
-  transition: .5s 1s;
+  transition: .5s .4s;
 } 
 /*----------------------------------------*/
 
 .js-show{
   transform: translateX(50px);
-  transition: .5s 1s;
+  transition: .5s .2s;
 }
 .js-hide{
   transform: translateX(0px);
-  transition: .5s 1s;
+  transition: .5s .2s;
 } 
 /*----------------------------------------*/
 .react-show{
   transform: translateX(30px);
-  transition: .5s 1s;
+  transition: .5s .2s;
 }
 .react-hide{
   transform: translateX(0px);
-  transition: .5s 1s;
+  transition: .5s .2s;
 } 
 /*----------------------------------------*/
 .php-show{
   transform: translateX(0px);
-  transition: .5s 1s;
+  transition: .5s .2s;
 }
 .php-hide{
   transform: translateX(0px);
-  transition: .5s 1s;
+  transition: .5s .2s;
 } 
 /*----------------------------------------*/
 .sql-show{
   transform: translateX(-30px);
-  transition: .5s 1s;
+  transition: .5s .2s;
 }
 .sql-hide{
   transform: translateX(0px);
-  transition: .5s 1s;
+  transition: .5s .2s;
 } 
 
 
 /*-------------------------------------------*/
 .oop-show{
 transform: translateX(-50px);
-transition: .5s 1s;
+transition: .5s .4s;
 }
 .oop-hide{
 transform: translateX(0px);
-transition: .5s 1s;
+transition: .5s .4s;
 } 
 
 
 /*-------------------------------------------*/
 .git-show{
   transform: translateX(-70px);
-  transition: .5s 1s;
+  transition: .5s .4s;
 }
 .git-hide{
   transform: translateX(0px);
-  transition: .5s 1s;
+  transition: .5s .4s;
 } 
 
 
@@ -731,6 +731,7 @@ display: flex;
 /*--------------------------------------------------------------------------------------------------------*/
 
 @media screen and (min-width: 0px) and (max-width:1200px){
+  
   .port{
     width: 100vw;
     justify-content: center;
@@ -738,6 +739,130 @@ display: flex;
     display: flex;
     flex-direction: column;
   }
+  /*----------------------------------*/
+.about{
+  width: 100%;
+  height: 100vh;
+
+}
+.about-header-text{
+  z-index: 3;
+}
+.about-con{
+
+  
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  overflow-y: hidden;
+ 
+  width: 100%;
+  height: 100%;
+}
+
+.grad-show{
+  
+    opacity: .5;
+    transition: 2s .5s;
+}
+.grad-hide{
+   
+    opacity: 1;
+    transition: 1s;
+} 
+.about-title {
+ 
+  font-size: 2.3rem;
+  letter-spacing: 2rem;
+
+} 
+.grad-top{
+  position: absolute;
+  overflow-y: hidden;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background: -webkit-linear-gradient(180deg, rgb(0, 0, 0, 0),  rgb(0, 0, 0, 0));
+}
+.grad{
+  position: absolute;
+  overflow-y: hidden;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background: -webkit-linear-gradient(90deg,  rgb(0, 0, 0, 1), rgb(0, 0, 0, 1));
+}
+.about-title h1{
+  background: -webkit-linear-gradient(90deg, rgb(255, 255, 255), rgba(255, 255, 255));
+  background-clip: text;
+   -webkit-text-fill-color: transparent;
+   margin-bottom: 2rem;
+ 
+}
+.about-text{
+  color: white;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10rem;
+  height: 24vh;
+ z-index: 3;
+}
+.about-text .underline{
+  
+   background-color: azure;
+   width: 1px;
+   height: 100%;
+}
+.about-text h1{
+ 
+ 
+   padding-bottom: 1rem;
+ 
+ 
+ 
+}
+.about-text p{
+  padding-bottom: 1rem;
+}
+.about-img{
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+.about-img .img{
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  position: relative;
+
+}
+.image-banner{
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.about-text p{
+  width: 60%;
+}
+/*-------------------------------------------*/
   .tech-con{
     width: 100%;
     height: 100vh;
@@ -747,53 +872,7 @@ display: flex;
     display: flex;
     flex-direction: column;
   }
-  .about-con{
-
-  
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    overflow-y: hidden;
-   
-    width: 100vw;
-    height: 100%;
-  }
-  .about-img{
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    width: 100vw;
-    height: 100%;
-  }
-  .about-img .img{
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    position: relative;
-  
-  }
-  .image-banner{
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-  
-    background-position: center;
-    background-attachment: fixed;
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-  .about-text p{
-    width: 60%;
-  }
+ 
 
 }
 @media screen and (min-width: 0px) and (max-width:950px) {
@@ -1003,6 +1082,143 @@ display: flex;
     align-items: center;
     display: flex;
 }
+/*----------------------------------*/
+.about{
+  width: 100%;
+  height: 100vh;
+
+}
+.about-header-text{
+  z-index: 3;
+}
+.about-con{
+
+  
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  overflow-y: hidden;
+ 
+  width: 100%;
+  height: 100%;
+}
+
+.grad-show{
+  
+    opacity: .5;
+    transition: 2s .5s;
+}
+.grad-hide{
+   
+    opacity: 1;
+    transition: 1s;
+} 
+.about-title {
+ 
+  font-size: 2.3rem;
+  letter-spacing: 2rem;
+
+} 
+.grad-top{
+  position: absolute;
+  overflow-y: hidden;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background: -webkit-linear-gradient(180deg, rgb(0, 0, 0, 0),  rgb(0, 0, 0, 0));
+}
+.grad{
+  position: absolute;
+  overflow-y: hidden;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background: -webkit-linear-gradient(90deg,  rgb(0, 0, 0, 1), rgb(0, 0, 0, 1));
+}
+.about-title h1{
+  background: -webkit-linear-gradient(90deg, rgb(255, 255, 255), rgba(255, 255, 255));
+  background-clip: text;
+   -webkit-text-fill-color: transparent;
+   margin-bottom: 2rem;
+ 
+}
+.about-text{
+  color: white;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10rem;
+  height: 24vh;
+ z-index: 3;
+}
+.about-text .underline{
+  
+   background-color: azure;
+   width: 1px;
+   height: 100%;
+}
+.about-text h1{
+ 
+ 
+   padding-bottom: 1rem;
+ 
+ 
+ 
+}
+.about-text p{
+  padding-bottom: 1rem;
+}
+.about-img{
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+.about-img .img{
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  position: relative;
+
+}
+.image-banner{
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.about-text p{
+  width: 60%;
+}
+/*-------------------------------------------*/
+.work-con{
+    
+  transform: translateY(-50px);
+  z-index: 4;
+  background-color: white;
+  border-radius: 20px;
+  width: 85%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
 .project-grid{
   width: 600px;
   justify-content: center;
@@ -1103,6 +1319,148 @@ display: flex;
     justify-content: center;
     align-items: center;
     display: flex;
+}
+/*----------------------------------*/
+.about{
+  width: 100%;
+  height: 100vh;
+
+}
+.about-header-text{
+  z-index: 3;
+}
+.about-header-text {
+  font-size: 1rem;
+}
+
+.about-con{
+
+  
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  overflow-y: hidden;
+ 
+  width: 100%;
+  height: 100%;
+}
+
+.grad-show{
+  
+    opacity: .5;
+    transition: 2s .5s;
+}
+.grad-hide{
+   
+    opacity: 1;
+    transition: 1s;
+} 
+.about-title {
+ 
+  font-size: 2.3rem;
+  letter-spacing: 2rem;
+
+} 
+.grad-top{
+  position: absolute;
+  overflow-y: hidden;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background: -webkit-linear-gradient(180deg, rgb(0, 0, 0, 0),  rgb(0, 0, 0, 0));
+}
+.grad{
+  position: absolute;
+  overflow-y: hidden;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background: -webkit-linear-gradient(90deg,  rgb(0, 0, 0, 1), rgb(0, 0, 0, 1));
+}
+.about-title h1{
+  background: -webkit-linear-gradient(90deg, rgb(255, 255, 255), rgba(255, 255, 255));
+  background-clip: text;
+   -webkit-text-fill-color: transparent;
+   margin-bottom: 2rem;
+   font-size: 2rem;
+   letter-spacing: 1rem;
+}
+.about-text{
+  color: white;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10rem;
+  height: 24vh;
+ z-index: 3;
+}
+.about-text .underline{
+  
+   background-color: azure;
+   width: 1px;
+   height: 100%;
+}
+
+.about-text p{
+  padding-bottom: 1rem;
+}
+.about-img{
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+.about-img .img{
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  position: relative;
+
+}
+.image-banner{
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.about-text p{
+  width: 80%;
+}
+.about-text p{
+  font-size: .9rem;
+}
+.about-text h1{
+  font-size: 1rem;
+  letter-spacing: .2rem;
+}
+/*-------------------------------------------*/
+.work-con{
+    
+  transform: translateY(-50px);
+  z-index: 4;
+  background-color: white;
+  border-radius: 20px;
+  width: 80%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 .project-grid{
   width: 400px;
