--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1151,7 +1151,7 @@ display: flex;
   display: flex;
   flex-direction: column;
   margin-top: 10rem;
-  height: 24vh;
+  height: 27vh;
  z-index: 3;
 }
 .about-text .underline{
@@ -1313,7 +1313,33 @@ display: flex;
   transition: .3s;
 } 
 }
-@media screen and (min-width: 0px) and (max-width:650px) {
+
+@media screen and (min-width: 0px) and (max-width:620px) {
+  .nav-link{
+    float: right;
+    width: 10%;
+    height: 100%;
+   
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin-right: 1rem;
+  }
+  .burger {
+    width: 60px;
+    height: 80px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+     
+  }
+  .burger span{
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    margin-top: .4rem;
+  }
   .projects{
     width: 100%;
     justify-content: center;
@@ -1396,6 +1422,7 @@ display: flex;
   margin-top: 10rem;
   height: 24vh;
  z-index: 3;
+ 
 }
 .about-text .underline{
   
@@ -1557,6 +1584,37 @@ display: flex;
 } 
 }
 @media screen and (min-width: 0px) and (max-width:550px) { 
+  .nav-link{
+    float: right;
+    width: 10%;
+    height: 100%;
+   
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin-right: 1rem;
+  }
+  .burger {
+    width: 60px;
+    height: 80px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+     
+  }
+  .burger span{
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    margin-top: .4rem;
+  }
+  /*---------------------------------------*/
+    .burger-active{
+       
+    }
+
+  /*---------------------------------------*/
   .landing-con{
     width: 100vw;
     height: 110vh;
