--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1571,7 +1571,7 @@ display: flex;
   }
   .links-con{
     width: 100vw;
-    height: 40vh;
+    height: 20vh;
     background-color: black;
     color: bisque;
     justify-content: center;
@@ -1583,7 +1583,7 @@ display: flex;
 
   .nav-link{
     float: right;
-    width: 20%;
+    width: 40%;
     height: 100%;
    
     justify-content: center;
@@ -1809,7 +1809,7 @@ display: flex;
 @media screen and (min-width: 0px) and (max-width:550px) { 
   .nav-link{
     float: right;
-    width: 20%;
+    width: 40%;
     height: 100%;
    
     justify-content: center;
@@ -2080,7 +2080,7 @@ display: flex;
 }
 .sc h1{
   font-size: 1.2rem;
-  
+  margin-right: 2rem;
   float: right;
   transform: translateY(-30px) rotate(90deg);
 }
