--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1434,6 +1434,7 @@ display: flex;
 
 .nav-link{
   float: right;
+  margin-right: 2rem;
   width: 40%;
   height: 100%;
   z-index: 3;
@@ -1504,6 +1505,7 @@ display: flex;
 @media screen and (min-width: 0px) and (max-width: 780px) {
   .nav-link{
     float: right;
+    margin-right: 2rem;
     width: 50%;
     height: 100%;
     z-index: 3;
@@ -1593,7 +1595,7 @@ display: flex;
 
   .nav-link{
     float: right;
-    width: 20%;
+    width: 30%;
     height: 100%;
    
     justify-content: center;
