--- a/react-app/src/comp/UIphoto.css
+++ b/react-app/src/comp/UIphoto.css
@@ -113,12 +113,26 @@
    text-decoration: none;
    color: black;
 }
+.text-des-link a {
+    text-decoration: none;
+    color: black;
+    
+}
+.text-des-link a i{
+    text-decoration: none;
+    color: black;
+    font-size: 1rem;
+}
 .text-des-link {
     background-color: rgb(248, 248, 248);
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    
 }
 .text-des-5 p {
     padding: 1rem;
-    font-size: .7rem;
+    font-size: .9rem;
     letter-spacing: 2px;
 }
 .text-des-5 h1 {
