--- a/react-app/src/comp/UIphoto.css
+++ b/react-app/src/comp/UIphoto.css
@@ -3,7 +3,7 @@
 }
 .title-div {
     padding-top: 3rem;
-    height: 40vh;
+    height: 60vh;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -791,6 +791,14 @@
     
 }
 @media screen and (min-width: 0px) and (max-width:680px) {
+    .title-div {
+        padding-top: 3rem;
+        height: 40vh;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+    }
+    /*----------------------------------------------*/
     .text-des-5 {
         width: 70%;
         justify-content: center;
