--- a/react-app/src/comp/UI.css
+++ b/react-app/src/comp/UI.css
@@ -52,6 +52,10 @@
     background-color: black;
     opacity: .6;
     position: absolute;
+    z-index: 2;
+}
+.star-gra {
+    background-color: rgb(255, 255, 255);
 }
 .proj-con {
     position: relative;
@@ -82,12 +86,17 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-    z-index: 1;
+    z-index: 4;
 }
 .proje-img {
     width: 100%;
     height: 100%;
-    
+    z-index: 1;
+    filter: blur(5px);
+
+}
+.star-wars {
+    filter: blur(8px);
 }
 .proj-text a {
     width: 100%;
@@ -113,21 +122,32 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    
 }
  .gra-w {
     width: 100%;
     height: 100%;
     background-color: rgb(65, 65, 65);
     position: absolute;
-    opacity: .4;
-    transform: translateY(100vh);
-    transition: .8s;
+    z-index: 3;
+    
 }
-.proj-con:hover .gra-w {
+/*.proj-con:hover .gra-w {
     opacity: 1;
     transform: translateY(0px);
     transition: .8s;
+} */
+.grid-w-hide {
+ 
+    opacity: 1;
+    transform: translateY(100vh);
+    transition: .8s;
 }
+.grid-w-show {
+    opacity: 1;
+    transform: translateY(0px);
+    transition: .8s;
+} 
 @media screen and (min-width: 0px) and (max-width:1000px) {
     .proj-grid {
         width: 95%;
